login and reviews updated

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,11 @@
             <button onclick="searchRestaurants()">Search</button>
         </div>
         <div id="results" class="results"></div>
+
+        <!-- Button to navigate to reviews.html -->
+        <div class="navigation">
+            <button onclick="window.location.href='reviews.html'">View Restaurant Reviews</button>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
